--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,25 @@ dist.dir=dist
 dist.jar=${dist.dir}/_EDD_Practica1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jdom-1.1.3-javadoc.jar=C:\\Users\\Jorge Espina\\Documents\\Programacion\\Estructuras de Datos\\Practica #1\\jdom-1.1.3\\jdom\\build\\jdom-1.1.3-javadoc.jar
+file.reference.jdom-1.1.3-sources.jar=C:\\Users\\Jorge Espina\\Documents\\Programacion\\Estructuras de Datos\\Practica #1\\jdom-1.1.3\\jdom\\build\\jdom-1.1.3-sources.jar
+file.reference.jdom-1.1.3.jar=C:\\Users\\Jorge Espina\\Documents\\Programacion\\Estructuras de Datos\\Practica #1\\jdom-1.1.3\\jdom\\build\\jdom-1.1.3.jar
+file.reference.jdom-2.0.6-contrib.jar=C:\\Users\\Jorge Espina\\Documents\\Programacion\\Estructuras de Datos\\Practica #1\\jdom-2.0.6\\jdom-2.0.6-contrib.jar
+file.reference.jdom-2.0.6-javadoc.jar=C:\\Users\\Jorge Espina\\Documents\\Programacion\\Estructuras de Datos\\Practica #1\\jdom-2.0.6\\jdom-2.0.6-javadoc.jar
+file.reference.jdom-2.0.6-junit.jar=C:\\Users\\Jorge Espina\\Documents\\Programacion\\Estructuras de Datos\\Practica #1\\jdom-2.0.6\\jdom-2.0.6-junit.jar
+file.reference.jdom-2.0.6-sources.jar=C:\\Users\\Jorge Espina\\Documents\\Programacion\\Estructuras de Datos\\Practica #1\\jdom-2.0.6\\jdom-2.0.6-sources.jar
+file.reference.jdom-2.0.6.jar=C:\\Users\\Jorge Espina\\Documents\\Programacion\\Estructuras de Datos\\Practica #1\\jdom-2.0.6\\jdom-2.0.6.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jdom-2.0.6-contrib.jar}:\
+    ${file.reference.jdom-2.0.6-javadoc.jar}:\
+    ${file.reference.jdom-2.0.6-junit.jar}:\
+    ${file.reference.jdom-2.0.6-sources.jar}:\
+    ${file.reference.jdom-2.0.6.jar}:\
+    ${file.reference.jdom-1.1.3-javadoc.jar}:\
+    ${file.reference.jdom-1.1.3-sources.jar}:\
+    ${file.reference.jdom-1.1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
